--- a/trackingBoard/src/main/resources/application.yml
+++ b/trackingBoard/src/main/resources/application.yml
@@ -2,11 +2,11 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/DTwebapp
     username: postgres
-    password: Tharushi
+    password: root
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
